<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#459848"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtheading"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:background="#0F00432E"
        android:gravity="center"
        android:text="@string/self_driving_car"
        android:textAllCaps="true"
        android:textColor="#003AFF"
        android:textColorLink="#0088FF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="76dp"
        android:background="#04A324"
        android:text="@string/start"
        android:gravity="center"
        android:textColor="#005E0B"
        android:textColorHint="#AF0013"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnstop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="#FF0027"
        android:text="@string/stop"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnstart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtspeed"
        android:layout_width="wrap_content"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="28dp"
        android:text="@string/speed"
        android:textColor="#F1BF29"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/slowfast"
        app:layout_constraintTop_toBottomOf="@+id/btnstop" />

    <Button
        android:id="@+id/btnpicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/getpicture"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slowfast" />

    <TextView
        android:id="@+id/txtviewstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:gravity="left"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="48dp"
        android:text="@string/status"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toEndOf="@+id/btnpicture"
        app:layout_constraintTop_toBottomOf="@+id/txtspeed" />

    <ImageView
        android:id="@+id/imgview"
        android:layout_width="292dp"
        android:layout_height="333dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/showimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpicture"
        app:srcCompat="@drawable/hcmutlogo" />

    <TextView
        android:id="@+id/txttime"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgview" />

    <ToggleButton
        android:id="@+id/slowfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/togglebutton"
        android:textOff="@string/slow"
        android:textOn="@string/fast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnstart" />

</androidx.constraintlayout.widget.ConstraintLayout>